--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,9 @@ data_ingestion:
   source_URL: https://github.com/chai-sura/MLFlow-project/raw/refs/heads/main/data/winequality-data.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/winequality-red.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
+
